Removed text-size from a:hover to prevent nav from jumping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,6 @@ img.col-sm {
 a:hover {
     color: rgb(62, 185, 173);
     text-shadow: 1px 1px rgb(62, 185, 173);
-    font-size: 18px;
 }
 
 a:active {
